# Extract

./: .gitignore  .pdm-python  README.md  pyproject.toml
1to4/: README.md  pyproject.toml
5to8/: README.md  pyproject.toml
9to12/: README.md  pyproject.toml
five_to_eight/src/five_to_eight/api/: call.py
nine_to_twelve/: README.md  pyproject.toml
nine_to_twelve/src/nine_to_twelve/api/: ninetotwelve.py
nine_to_twelve/tests/: test_call.py
one_to_four/src/one_to_four/api/: call.py
one_to_four/tests/: test_call.py
src/Extract.egg-info/: PKG-INFO  SOURCES.txt
src/extract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/extract/api/: .one_to_four.py.swp  five_to_eight.py  nine_to_twelve.py  ninetotwelve.py
src/one_to_four.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_call.py
