[project]
name = "nine_to_twelve"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
    "pyfiglet>=1.0.2",
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pdm]
distribution = false
